--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
-.App {
-  text-align: center;
+.employee-table {
+    max-width: 1100px;
+    margin: 30px auto;
+    border: 1px solid;
+    padding: 7px;
+    border-radius: 7px;
+    background-color: white;
+}
+.employee-table-header {
+    font-size: 120%;
+    font-weight: bold;
+    padding: 8px 0;
+    border-bottom: 1px solid;
+    margin-bottom: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bg-contrast {
+    background-color: rgb(11, 73, 44);
 }
